tests/compile_errors/007-yield-location.buzz
| Can't yield here
test "Bad yield" {
    yield "yolo";
}